--- a/settings.yaml
+++ b/settings.yaml
@@ -1,17 +1,35 @@
-hide_topic_list_activity:
+show_topic_views_count:
   type: bool
   default: false
   description:
-    en: "Hide the time since last activty in the Topic list Stats column."
+    en: "Show the total number of views in the Topic Stats column on the Category homepage."
 
-hide_topic_list_views:
+hide_topic_list_views_count:
   type: bool
   default: false
   description:
-    en: "Hide number of views in the Topic list Stats column."
+    en: "Hide number of topic views in all topic list filter pages."
 
-hide_topic_list_posts:
+hide_replies_count:
+  type: bool
+  default: false
+  description: 
+    en: "Hide the replies count from the Topic Stats column."
+
+hide_topic_list_post_count:
   type: bool
   default: false
   description:
     en: "Hide number of topic posts in the Topic list Stats column."
+
+hide_time_since_last_activity:
+  type: bool
+  default: false
+  description:
+    en: "Hide the time since last activty in the Topic Stats column on the Category homepage."
+
+hide_topic_list_time_since_last_activity:
+  type: bool
+  default: false
+  description:
+    en: "Hide the time since last activty in all topic list filter pages."
