--- a/settings.yaml
+++ b/settings.yaml
@@ -2,7 +2,7 @@ hide_topic_views_count:
   type: bool
   default: false
   description:
-    en: "Hide the total number of views in the topic stats column on the Category homepage."
+    en: "Hide the total number of views in the topic stats column on the category homepage."
 
 hide_topic_list_views_count:
   type: bool
@@ -14,7 +14,7 @@ hide_replies_count:
   type: bool
   default: false
   description: 
-    en: "Hide the number of replies in the topic stats column on the Category homepage."
+    en: "Hide the number of replies in the topic stats column on the category homepage."
 
 hide_topic_list_replies_count:
   type: bool
@@ -26,10 +26,16 @@ hide_time_since_last_activity:
   type: bool
   default: false
   description:
-    en: "Hide the time since last activty in the topic stats column on the Category homepage."
+    en: "Hide the time since last activty in the topic stats column on the category homepage."
 
 hide_topic_list_time_since_last_activity:
   type: bool
   default: false
   description:
     en: "Hide the time since last activty  on all topic list filter pages."
+
+hide_category_topic_stats:
+  type: bool
+  default: false
+  description:
+    en: "Hide the topic stats from the category list on the category homepage."
