--- a/settings.yaml
+++ b/settings.yaml
@@ -120,3 +120,10 @@ hide_topic_stats_in_mobile_view:
   default: false
   description:
     en: "Hide the topic stats column from the category homepage in mobile."
+
+hide_badge_notification_in_mobile_view:
+  type: bool
+  default: false
+  description:
+    en: "Hide the badge notifications from the category homepage in mobile."
+
