--- a/settings.yaml
+++ b/settings.yaml
@@ -127,3 +127,8 @@ hide_time_since_last_activity_in_mobile_view:
   description:
     en: "Hide the time since last activity in topic list filter pages in mobile view."
 
+hide_all_stats_from_anon:
+  type: bool
+  default: false
+  description:
+    en: "Hide all topic stats from anonymous users in both desktop and mobile views."
