--- a/settings.yaml
+++ b/settings.yaml
@@ -121,6 +121,12 @@ hide_topic_stats_in_mobile_view:
   description:
     en: "Hide the topic stats column from the category homepage in mobile view."
 
+hide_category_stats_in_mobile_viewn:
+  type: bool
+  default: false
+  description:
+    en: "Hide the category stats row from the category homepage in mobile view."
+
 hide_time_since_last_activity_in_mobile_view:
   type: bool
   default: false
