--- a/settings.yaml
+++ b/settings.yaml
@@ -22,6 +22,12 @@ hide_category_topic_stats:
   description:
     en: "Hide the topic stats column from the category list on the category homepage in desktop view."
 
+hide_category_stats_in_mobile_view:
+  type: bool
+  default: false
+  description:
+    en: "Hide the category stats rows from the category homepage in mobile view."
+
 hide_topic_stats_in_mobile_view:
   type: bool
   default: false
